--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sttwins_viewer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sttwins.herokuapp.com",
   "engines": {
     "npm": "6.14.5",
     "node": "12.18.1"
