--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sttwins_viewer",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sttwins.herokuapp.com",
+  "homepage": "http://o-seer.github.io/sttwins",
   "engines": {
     "npm": "6.14.5",
     "node": "12.18.1"
@@ -26,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,6 +47,7 @@
   },
   "devDependencies": {
     "@types/debounce": "^1.2.0",
-    "@types/jquery": "^3.5.1"
+    "@types/jquery": "^3.5.1",
+    "gh-pages": "^3.1.0"
   }
 }
